# android_opencl_test

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/ru/michaelilyin/alg1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_tools.cpp  android_tools.h  cl_test.cpp  cl_test.h
app/src/main/cpp/gl_gpgpu/: pipeline_renderer.h
app/src/main/java/ru/opencl_test/alg1/: CLUtils.java  MainActivity.java
app/src/main/java/ru/opencl_test/alg1/gl/: FrameBufferObject.java  GLQuad.java  GLRenderer.java  GLRendererNative.java  GLRendererSimple.java  GLShader.java  ImgprocJNI.java
app/src/main/java/ru/opencl_test/alg1/kernelgen/: AbstractKernelLang.java  KernelGenerator.java  KernelLangGLSL.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/raw/: gauss_5x5.cl  gauss_5x5_f.glsl
app/src/main/res/values/: strings.xml
app/src/main/rs/: gauss_for_5x5.rs  gauss_for_5x5_fs.fs
app/src/test/java/ru/michaelilyin/alg1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
